# whale-inference

./: .env.example  .envrc  .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
app/: config.py  main.py
app/exceptions/: exception.py
app/generator/: base.py  clarification.py  get_http_method.py  http_request.py  response.py  selection.py
app/generator/create/: application.py
app/generator/use/: clarification.py  http_request.py  selection.py
app/llm/: base.py  model.py  open_ai.py
app/models/: application.py  inference.py  message.py
app/models/inference/: create.py  use.py
app/processor/: postprocess.py  preprocess.py
app/prompts/: functions.py  open_ai.py  test.json
app/prompts/clarification/: open_ai.py
app/prompts/create/: functions.py
app/prompts/create/application/: open_ai.py
app/prompts/http_request/: open_ai.py
app/prompts/selection/: open_ai.py
app/prompts/use/: functions.py
app/prompts/use/clarification/: open_ai.py
app/prompts/use/http_request/: open_ai.py
app/prompts/use/selection/: open_ai.py
